# beautiful-win32-api

./: .gitignore  CMakeLists.txt  LICENSE  README.md
headers/win32/: abi.hpp  file.hpp  win32.hpp
sources/: dll.cpp  dpi.cpp  file.cpp  shared.hpp  utf8.cpp  window.cpp
tests/: dpi_awareness.manifest  test.cpp
